<resources>
    <string name="app_name">HealthCareProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_patient">Insira o nome do paciente</string>
    <string name="choose_doctor">Escolha um médico</string>
    <string name="create_consultation">Criar consulta</string>
    <string name="consultation_title">Título da consulta</string>
    <string name="pick_a_date">Escolha a data</string>
    <string name="confirmar">Confirmar</string>
    <string name="consultation">Consultar</string>
    <string name="vaccine">Vacinar</string>
    <string name="vaccine_title">Título da vacina</string>
    <string name="no_atestado_found">Essa consulta ainda não gerou um atestado</string>
    <string name="atestado">Atestado:</string>
    <string name="generated_atestado">O atestado gerado foi enviado por email.</string>
    <string name="cancel">Cancelar</string>
    <string name="patient_data">Dados do paciente</string>
    <string name="symptoms">Sintomas</string>
    <string name="medicine">Medicamentos</string>
</resources>